chore: Update postgres-docker-compose.yml

--- a/docker/postgres-docker-compose.yml
+++ b/docker/postgres-docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   pg:
-    image: postgres:12.3-alpine
+    image: postgres:15.4-bookworm
     restart: always
     ports:
       - 5432:5432
@@ -13,7 +13,7 @@ services:
 
   pgweb:
     restart: always
-    image: sosedoff/pgweb
+    image: sosedoff/pgweb:latest
     ports:
       - "8081:8081"
     environment:
