--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -5,12 +5,15 @@ info:
   repository_url: https://github.com/Selleo/templates
 options:
   commits:
-    # filters:
-    #   Type:
-    #     - feat
-    #     - fix
-    #     - perf
-    #     - refactor
+    filters:
+      Type:
+        - chore
+        - feat
+        - fix
+        - hotfix
+        - perf
+        - refactor
+        - style
   commit_groups:
     # title_maps:
     #   feat: Features
